Confluence maven plugin like the refapp plugin * Refactors refapp plugin to be the base for other product-specific plugins * Confluence plugins are installed into bundled plugin zip by default REFAPP-17
git-svn-id: https://studio.atlassian.com/svn/REFAPP/branches/atlassian-refapp-2.2.x@34954 2c54a935-e501-0410-bc05-97a93f6bca70